name:                htcl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mt-caret/htcl#readme
license:             BSD3
license-file:        LICENSE
author:              mt-caret
maintainer:          mtakeda.enigsol@gmail.com
copyright:           2019 mt-caret
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable htcl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
